--- a/css/slide.css
+++ b/css/slide.css
@@ -23,6 +23,6 @@
 }
 
 .slide1 {
-	background: url('../images/Streamm1-100.jpg') no-repeat center center / cover;	/
+	background: url('../images/te1-100.jpg') no-repeat center center / cover;	/
 }
 
